@@ -98,7 +98,7 @@
    // (un)Check all featureType checkboxes
    function checkAll(id)
    {
-     jQuery(".featureType").attr('checked', jQuery('#' + id).is(':checked'));
+     jQuery(".featureType").prop('checked', jQuery('#' + id).is(':checked'));
      jQuery("#check").css("opacity", 1);
    }
 
@@ -112,7 +112,7 @@
            });
 
            if (statTag) {
-            jQuery("#check").attr('checked', true);
+            jQuery("#check").prop('checked', true);
             jQuery("#check").css("opacity", 0.5); }
            else {
             jQuery("#check").removeAttr('checked');
@@ -124,10 +124,10 @@
          });
 
          if (statTag) {
-           jQuery("#check").attr('checked', true);
+           jQuery("#check").prop('checked', true);
            jQuery("#check").css("opacity", 0.5); }
          else {
-           jQuery("#check").attr('checked', true);
+           jQuery("#check").prop('checked', true);
            jQuery("#check").css("opacity", 1);}
          }
    }
